@@ -3,7 +3,8 @@
  * Removed illegal elementals (glint_global_grid.f90) and unnecessary
    pures
  * Fixed segfault array allocation bug (glint.f90)
-
+ * Changes to glint.f90 to aid readability (some structural, some formatting)
+	
 2005-08-24 Ian Rutt
  * Updated with improvements from GENIE development:
 	- Sigma levels from config file if desired
